
2009-02-09 Daniel Andreca
	- GUI:
		* Fixed #1649: Able to login to pma after session times out
	- THEMES:
		* Fixed #1646: Tiny html special char encoding problem in include/admin-functions.php (Thanks Haeber)
		* Fixed #1652: Html structure/tree failure in admin/settings_layout.tpl and reseller/settings_layout.tpl
		* Fixed #1653: Lost font-tag in reseller/user_add2.tpl (Thanks Haeber)

2009-02-08 Daniel Andrecafile:///_backup/ispcp/CHANGELOG
	- THEMES:
		* Fixed #1646: Tiny html special char encoding problem in include/admin-functions.php (Thanks Haeber)
		* Fixed #1647: Two template fixes (Thanks Haeber)
		* Fixed #1609: RC7 update script: ns.domain.tld missing from bind templates

2009-02-07 Daniel Andreca
	- THEMES:
		* Fixed #1642: Some html problems in reseller/admin statistics (Thanks Haeber)
		* Fixed #1643: Commented out (useless?) code in admin/reseller_add.php and admin/reseller_edit.php (Thanks Haeber)
		* Fixed #1640: Typo in comment-block reseller/domain_alias.tpl (Thanks Haeber)
		* Fixed #1639: Template comment page_massage in index.tpl (login site) is not replaced
		* Fixed #1637: Tiny css fix in omega phpmyadmin theme (Thanks Haeber)
		* Fixed #1645: Tiny comment problem in reseller/domain_alias.tpl (Thanks Haeber)

2009-02-06 Daniel Andreca
	- ENGINE:
		* Fixed #1613: RC7 update script: htaccess users status NULL
		* Fixed #1607: Update script failed in RC7
		* Fixed #1608: RC7 update script: lang_* table missing
		* Fixed #1611: RC7 update script: forward mail addresses line seperation
		* Fixed #1630: Error docs overwritten
	- LANGUAGES:
		* Fixed #1632: Update german translation (Thanks Haeber)
	- CONFIGS:
		* Fixed #1633: Hide X-Powered-By PHP response header by set expose_php to off in php.ini (Thanks Haeber)
	- THEMES:
		* Fixed #1635: A little miss in ../admin/domain_edit.tpl (Thanks Nathariel)
		* Fixed #1636: In two html files the css block contains wrong comments (Thanks Haeber)
	- GUI: