@@ -22,6 +22,11 @@
 
 Alias /awstatsicons "{AWSTATS_WEB_DIR}/icon/"
 
+<Directory /var/www/localhost/htdocs/awstats/icon/>
+    Order allow,deny
+    Allow from all
+</Directory>
+
 
 NameVirtualHost 127.0.0.1:80
 
