@@ -16,7 +16,7 @@
 	</tr>
 </table>
 <!-- EDP: logged_from -->
-<table width="100%" border="0" cellspacing="0" cellpadding="0" style="height=100%;border-collapse: collapse;padding:0;margin:0;">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" style="height:100%;border-collapse: collapse;padding:0;margin:0;">
 	<tr>
 		<td align="left" valign="top" style="vertical-align: top; width: 195px; height: 56px;"><img src="{THEME_COLOR_PATH}/images/top/top_left.jpg" alt="" border="0"></td>
 		<td style="height: 56px; width:100%; background-image: url({THEME_COLOR_PATH}/images/top/top_bg.jpg)"><img src="{THEME_COLOR_PATH}/images/top/top_left_bg.jpg" alt="" border="0"></td>
@@ -26,7 +26,7 @@
 		<td style="width: 195px; vertical-align: top;">{MENU}</td>
 		<td colspan="2" style="vertical-align: top;">
 			<table style="width: 100%; border-collapse: collapse;padding:0;margin:0;">
-				<tr style="height=95;">
+				<tr style="height: 95;">
 					<td style="padding-left:30px; width: 100%; background-image: url({THEME_COLOR_PATH}/images/top/middle_bg.jpg);">{MAIN_MENU}</td>
 					<td style="padding:0;margin:0;text-align: right; width: 73px;vertical-align: top;"><img src="{THEME_COLOR_PATH}/images/top/middle_right.jpg" alt="" border="0"></td>
 				</tr>
